// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with props 1`] = `
<Link
  className="text-dark-secondary floating ratio--square display-inline-block rounded background--light-tertiary push-right"
  onlyActiveOnIndex={false}
  style={
    Object {
      "height": 787.2,
      "width": 787.2,
    }
  }
  to="/series/2/sermon/1"
>
  <div
    className="one-whole soft-sides text-left floating__item"
  >
    <div
      className="background--light-primary floating locked-left locked-top"
      style={
        Object {
          "borderRadius": "6px 0 6px 0",
          "height": "40px",
          "width": "40px",
        }
      }
    >
      <h5
        className="floating__item flush"
      >
        2
      </h5>
    </div>
    <h4>
      test sermon
    </h4>
    <i
      className="soft-half-right icon-category-video"
    />
    <h7>
      Jim Bob
    </h7>
    <h7
      className="push-half-top float-right text-right"
    >
      Invalid date
    </h7>
  </div>
</Link>
`;

exports[`test renders with props 1`] = `
<Link
  className="text-dark-secondary floating ratio--square display-inline-block rounded background--light-tertiary push-right"
  onlyActiveOnIndex={false}
  style={
    Object {
      "height": 787.2,
      "width": 787.2,
    }
  }
  to="/series/2/sermon/1">
  <div
    className="one-whole soft-sides text-left floating__item">
    <div
      className="background--light-primary floating locked-left locked-top"
      style={
        Object {
          "borderRadius": "6px 0 6px 0",
          "height": "40px",
          "width": "40px",
        }
      }>
      <h5
        className="floating__item flush">
        2
      </h5>
    </div>
    <h4>
      test sermon
    </h4>
    <i
      className="soft-half-right icon-category-video" />
    <h7>
      Jim Bob
    </h7>
    <h7
      className="push-half-top float-right text-right">
      Invalid date
    </h7>
  </div>
</Link>
`;
